--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -163,9 +163,11 @@
                     </ul>
                 </div>
                 <div class="col-sm-4 footer-widget">
-                    <h5 class="heading inverse">Logos <span class="color2">partenaires</span></h5>
+                    <h5 class="heading inverse">Nos <span class="color2">partenaires</span></h5>
                     <ul class="affiliations">
-                        <li><img src="{{ asset('educomp/images/logo.png') }}" class="img-responsive" alt=""></li>
+                        <li><a target="_blank" href="http://enseignement-catholique.fr/"><img src="{{ asset('educomp/images/logo_1.png') }}" class="img-responsive" alt=""></a></li>
+                        <li><a target="_blank" href="http://www.udesca.fr/"><img src="{{ asset('educomp/images/logo_2.png') }}" class="img-responsive" alt=""></a></li>
+                        <li><a target="_blank" href="http://www.unisfec.fr/"><img src="{{ asset('educomp/images/logo_3.png') }}" class="img-responsive" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 footer-widget">            <!-- Footer Widget - Contact Info -->
