--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -978,6 +978,21 @@
                     url: steps + upload_srcSteps  + upload_course + folderLocation,
                     dropZone:null,
                     dataType: 'json',
+                    /*add: function(e, data) {
+                        var uploadErrors = [];
+                        var acceptFileTypes = /^image\/(gif|jpe?g|png)$/i;
+                        if(data.files[0]['type'].length && !acceptFileTypes.test(data.files[0]['type'])) {
+                            uploadErrors.push('Not an accepted file type');
+                        }
+                        if(data.files[0]['size'].length && data.files[0]['size'] > 10000000) {
+                            uploadErrors.push('Filesize is too big');
+                        }
+                        if(uploadErrors.length > 0) {
+                            alert(uploadErrors.join("\n"));
+                        } else {
+                            data.submit();
+                        }
+                    },*/
                     done: function (e, data) {
                         $.each(data.result.files, function (index, file) {
                             var myUrlTab = file.url.split(folderLocation);
