--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -106,7 +106,31 @@
                 });
             });
             $('.btnDownloadFilters').click(function(){
+                var users = [];
+                $('.checkUserEmailing:checked').each(function(){
+                    users.push($(this).closest('.usrEmailingRow').find('.usrEmailing').attr('data-userId'));
+                });
+                $.ajax({
+                    type: 'POST',
+                    url: "{{path('emailingGenerateCsv_ajax')}}",
+                    async: false,
+                    dataType: "json",
+                    data: {
+                        users: users
+                    },
+                    success: function (data) {
+                        var csvContent = "data:text/csv;charset=utf-8,";
+                        data['data'].forEach(function(infoArray, index){
 
+                            dataString = infoArray.join(",");
+                            csvContent += index < data['data'].length ? dataString+ "\n" : dataString;
+
+                        });
+                        var encodedUri = encodeURI(csvContent);
+                        var win = window.open(encodedUri);
+                        win.focus();
+                    }
+                });
             });
         });
     </script>
