--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -131,6 +131,17 @@
                             url: steps + upload_srcSteps + upload_course + folderLocation,
                             dropZone:null,
                             dataType: 'json',
+                            add: function(e, data) {
+                                var uploadErrors = [];
+                                if(data.files[0]['size'] > 5000000) {
+                                    uploadErrors.push('Fichier trop volumineux : ne pas dépasser 5MO');
+                                }
+                                if(uploadErrors.length > 0) {
+                                    alert(uploadErrors.join("\n"));
+                                } else {
+                                    data.submit();
+                                }
+                            },
                             done: function (e, data) {
                                 $.each(data.result.files, function (index, file) {
                                     var myUrlTab = file.url.split(folderLocation);
@@ -301,6 +312,17 @@
                                                         <div class="itemInfos itemHeader col-xs-10">
                                                             <div class="itemTitle">{{ valR.nom }}</div>
                                                             <div class="itemDescription">{{ valR.description | raw }}</div>
+                                                            {% if '.mp4' in valR.url %}
+                                                                <video controls>
+                                                                    <source src="{{ valR.url }}" type="video/mp4">
+                                                                    Votre navigateur ne supporte pas la balise "video".
+                                                                </video>
+                                                            {% elseif '.mp3' in valR.url %}
+                                                                <audio controls>
+                                                                    <source src="{{ valR.url }}" type="audio/mpeg">
+                                                                    Votre navigateur ne supporte pas la balise "audio".
+                                                                </audio>
+                                                            {% endif %}
                                                         </div>
                                                         <div class="col-xs-2 text-right">
                                                             <a class="btn btnLien btn-sm btn-warning" target="_blank" href="{{ valR.url }}">
