--- a/app/Resources/views/forum/sujet.html.twig
+++ b/app/Resources/views/forum/sujet.html.twig
@@ -98,7 +98,7 @@
     </script>
     <div class="container pt-40 pb-40" data-sujetId="{{ sujet.id }}">
 
-        <h3 class="heading text-center">Messages</h3>
+        <h3 class="heading text-center">{{ sujet.titre }}</h3>
         <div class="row">
             {% for key,val in posts %}
                 <div class="col-sm-12" data-postId="{{ val.id }}">
